fixed home screen spacing

--- a/client/src/styles/HomePage.css
+++ b/client/src/styles/HomePage.css
@@ -78,7 +78,7 @@
 /* Divider */
 .home-divider {
     position: relative;
-    margin: 2.5rem 0;
+    margin: .5rem 0;
 }
 
 .home-divider-line {
